@@ -1,3 +1,8 @@
+2005-03-18  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: fix bug which could cause leave busy inodes after
+	unmount, and Oops.
+
 2005-03-08  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.2.1
